# osmo-el2tpd

./: Makefile.am  README.md  configure.ac
contrib/: jenkins.sh
siu/l2tp/: Makefile  crc32.c  l2tp_protocol.h  l2tpd.c  l2tpd.h  l2tpd_ctrl_fsm.c  l2tpd_data.c  l2tpd_data.h  l2tpd_fsm.c  l2tpd_fsm.h  l2tpd_lapd.c  l2tpd_lapd.h  l2tpd_packet.c  l2tpd_packet.h  l2tpd_socket.c  l2tpd_socket.h  test_connect.c
siu/notes/: notes.txt
src/: Makefile  Makefile.am  crc32.h  l2tp_protocol.h  l2tpd.c  l2tpd.h  l2tpd_data.c  l2tpd_data.h  l2tpd_fsm.c  l2tpd_fsm.h  l2tpd_lapd.c  l2tpd_lapd.h  l2tpd_logging.c  l2tpd_logging.h  l2tpd_packet.c  l2tpd_socket.c  l2tpd_socket.h  test_connect.c  unixsocket_proto.h
